--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 .app-layout {
   height: 100vh;
 }
@@ -13,36 +15,42 @@
   position: relative;
   z-index: 10;
   min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 2px 0 6px rgb(255, 255, 255);
 }
 
 .header-trigger {
-  height: 64px;
-  padding: 20px 24px;
+  height: 100px;
+  /* padding: 20px 24px; */
   font-size: 20px;
   cursor: pointer;
-  transition: all .3s,padding 0s;
+  /* transition: all .3s,padding 0s; */
 }
 
-.trigger:hover {
-  color: #1890ff;
+.trigger {
+  color: #004892;
+  align-items: center;
 }
 
 .sidebar-logo {
   position: relative;
-  height: 64px;
-  padding-left: 24px;
+  height: 100px;
+  /* padding-left: 24px; */
   overflow: hidden;
-  line-height: 64px;
-  background: #001529;
-  transition: all .3s;
+  line-height: 100px;
+  background: #fff;
+  align-self: center;
+  /* transition: all .3s; */
 }
 
 .sidebar-logo img {
   display: inline-block;
-  height: 32px;
-  width: 32px;
-  vertical-align: middle;
+  height: 60px;
+  width: 60px;
+}
+
+.menu-item{
+  padding-right: 10px;
 }
 
 .sidebar-logo h1 {
@@ -63,10 +71,10 @@ nz-header {
 
 .app-header {
   position: relative;
-  height: 64px;
+  height: 100px;
   padding: 0;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  box-shadow: 0 1px 4px rgba(255, 255, 255);
 }
 
 nz-content {
@@ -74,7 +82,7 @@ nz-content {
 }
 
 .inner-content {
-  padding: 24px;
+  /* padding: 24px; */
   background: #fff;
   height: 100%;
 }
