--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --main-color: #004892;
+    --main-color: #923100;
     --accent-color: #004892;
+    --primary-color: #004892;
   }
+
+
