--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nz-layout class="app-layout">
-  <nz-sider class="menu-sidebar"
+<!-- <nz-layout class="app-layout"> -->
+  <!-- <nz-sider class="menu-sidebar"
             nzCollapsible
             nzWidth="256px"
             nzBreakpoint="md"
@@ -33,9 +33,9 @@
         </ul>
       </li>
     </ul>
-  </nz-sider>
-  <nz-layout>
-    <nz-header>
+  </nz-sider> -->
+  <!-- <nz-layout> -->
+    <!-- <nz-header>
       <div class="app-header">
         <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
             <span class="trigger"
@@ -44,11 +44,13 @@
             ></span>
         </span>
       </div>
-    </nz-header>
+    </nz-header> -->
+
     <nz-content>
-      <div class="inner-content">
+      <div class="content">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
-  </nz-layout>
-</nz-layout>
+
+  <!-- </nz-layout> -->
+<!-- </nz-layout> -->
