Root admin-app defined and admin routes

--- a/src/app/components/admin/cardEspacio/cardEspacio.component.css
+++ b/src/app/components/admin/cardEspacio/cardEspacio.component.css
@@ -19,3 +19,13 @@
     left: 0;
     right:0;
 }
+
+.title{
+    font-size: 1rem;
+    top: 40%;
+    left: 20;
+    right: 20;
+    position: absolute;
+    color: white;
+    text-align: center;   
+}
