--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.css
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.css
@@ -15,9 +15,9 @@
 }
 
 .container{
-    width: 100%;
+    width: 100vw;
     /* display: flex; */
-    background-color: #F4F4F4;
+    /* background-color: #F4F4F4; */
     align-content: center;
     align-items: center;
     
