--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <h2 nz-typography class="card-title">Panel de Administrador</h2>
     <div class="row">
@@ -5,7 +6,7 @@
             <div class="row">
                 <div class="col-sm-6" *ngFor="let module of modulesAdmin" >
                     <app-cardPanelAdmin [name]="module.name" [total]="module.total" [active]="module.active"
-                        [inactive]="module.inactive" [lastEdit]="module.lastEdit"></app-cardPanelAdmin>
+                        [inactive]="module.inactive" [lastEdit]="module.lastEdit" [path]="module.path"></app-cardPanelAdmin>
                 </div>
             </div>
         </div>
