--- a/src/app/components/user/home/stats/stats.component.html
+++ b/src/app/components/user/home/stats/stats.component.html
@@ -3,7 +3,7 @@
 
     <carousel  class="carousel-dark h-100 d-block" [interval]="0">
         <slide >
-          <div class="text-center py-3 w-80 mx-auto">
+          <div class="text-center w-80 mx-auto mt-5">
             <div class="circular mx-auto">
                 <div class="inner"></div>
                 <div class="outer"></div>
@@ -22,7 +22,7 @@
                    </div>
                 </div>
              </div>
-            <h5>Aforo actual del gimnasio</h5>
+            <h5 class="mt-5">Aforo actual del gimnasio</h5>
           </div>
         </slide>
         <slide class="h-100">
