--- a/src/app/components/user/reservar/card-deporte/card-deporte.component.css
+++ b/src/app/components/user/reservar/card-deporte/card-deporte.component.css
@@ -9,3 +9,7 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.fondo{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
+}
