--- a/src/app/components/user/reservar/card-deporte/card-deporte.component.html
+++ b/src/app/components/user/reservar/card-deporte/card-deporte.component.html
@@ -1,4 +1,7 @@
-<div class="menu-btn my-3 py-4 text-center rounded-3 reserva-fondo">
-    <h3 class="text-white">Reserva</h3>
-    <!-- <span nz-icon nzType="schedule" nzTheme="outline" class="text-white fs-1"></span> -->
-</div>
+
+<div class="card text-white my-2 rounded-3">
+    <img src={{imagen}} class="card-img" alt="...">
+    <div class="card-img-overlay fondo text-white text-center align-middle">
+      <h5 class="text-white my-3">{{nombre}}</h5>
+    </div>
+  </div>
