--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -4,7 +4,7 @@
 <div class="container menu-home">
     <div class="row justify-content-between">
         <div class="col-12 p-0">
-            <div class="menu-btn my-2 py-4 text-center rounded-3 reserva-fondo">
+            <div nzMatchRouterExact routerLink="./reservar" class="menu-btn my-2 py-4 text-center rounded-3 reserva-fondo ">
                 <h3 class="text-white">Reserva</h3>
                 <span nz-icon nzType="schedule" nzTheme="outline" class="text-white fs-1"></span>
                 <!-- <span nz-icon nzType="schedule" nzTheme="outline" class="text-white fs-1"></span> -->
