--- a/src/app/pages/user/reservar/reservar.component.html
+++ b/src/app/pages/user/reservar/reservar.component.html
@@ -6,16 +6,12 @@
     <ng-template #suffixIconSearch>
         <span nz-icon nzType="search"></span>
     </ng-template>
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-6">
-                <app-card-deporte></app-card-deporte>
-            </div>
-            <div class="col-6">
-                <app-card-deporte></app-card-deporte>
+    <div class="container px-0">
+        <div class="row justify-content-between mt-3">
+            <div class="col-6" *ngFor="let deporte of deportes" >
+                    <app-card-deporte [nombre]='deporte.nombre' [imagen]="deporte.imagen"></app-card-deporte>
             </div>
         </div>
     </div>
-    <!-- <app-card-deporte></app-card-deporte> -->
       
 </div>
