--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.css
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.css
@@ -10,7 +10,7 @@
     height: 120px;
     font-size: 14px;
     line-height: 120px;
-    background: #0092ff;
+    background: #004892;
     border-radius: 4px;
 }
 
