--- a/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
+++ b/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
@@ -2,7 +2,7 @@
     <div class="card" style="width: 15rem;">
         <img class="card-image" alt="example" src="../../../../assets/login-image.jpeg" />
         <h2 nz-typography class="card-title" style="font-size: 1rem;">{{name}}</h2>
-        <div class="badge bg-primary text-wrap" style="width: 6rem;">
+        <div class="badge text-wrap" style="width: 6rem;">
             {{total}} totales
           </div>
         <div class="row">
