--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -1,17 +1,21 @@
-
 <div class="container">
-    <h2 nz-typography class="card-title">Panel de Administrador</h2>
+
     <div class="row">
         <div class="col-sm-6">
+            <h2 nz-typography class="card-title">Panel de Administrador</h2>
             <div class="row">
-                <div class="col-sm-6" *ngFor="let module of modulesAdmin" >
+                <div class="col-sm-6" *ngFor="let module of modulesAdmin">
                     <app-cardPanelAdmin [name]="module.name" [total]="module.total" [active]="module.active"
-                        [inactive]="module.inactive" [lastEdit]="module.lastEdit" [path]="module.path"></app-cardPanelAdmin>
+                        [inactive]="module.inactive" [lastEdit]="module.lastEdit"
+                        [path]="module.path"></app-cardPanelAdmin>
                 </div>
             </div>
         </div>
         <div class="col-sm-6">
+            <div class="card">
+                <h2 nz-typography class="card-title" style="margin-top: 5%;">Estadisticas</h2>
 
+            </div>
         </div>
     </div>
 </div>
