--- a/src/app/components/user/home/stats/stats.component.css
+++ b/src/app/components/user/home/stats/stats.component.css
@@ -82,9 +82,17 @@
     z-index: 1;
     animation: left 4s linear both;
   }
+
+:root{
+  --leftRotate: 180deg;
+  --rightRotate: 180deg;
+  --endRotate: 180deg;
+}
+
   @keyframes left {
     100%{
-      transform: rotate(180deg);
+      /* --leftRotate: 0deg; */
+      transform: rotate(var(--leftRotate));
     }
   }
   .circle .right{
@@ -97,7 +105,8 @@
   }
   @keyframes right {
     100%{
-      transform: rotate(180deg);
+      /* --rightRotate: 0deg; */
+      transform: rotate(var(--rightRotate));
     }
   }
   .circle .dot{
@@ -111,7 +120,7 @@
     animation: dot 8s linear both;
     transform-origin: 0% 50%;
   }
-  .circle .dot span {
+  /* .circle .dot span {
     position: absolute;
     right: 0;
     width: 10px;
@@ -130,4 +139,4 @@
       transform: rotate(270deg);
       z-index: 4;
     }
-  }
+  } */
