--- a/src/app/components/user/home/stats/stats.component.html
+++ b/src/app/components/user/home/stats/stats.component.html
@@ -14,10 +14,10 @@
                    <div class="dot">
                       <span></span>
                    </div>
-                   <div class="bar left">
+                   <div class="bar left" id="left">
                       <div class="progress"></div>
                    </div>
-                   <div class="bar right">
+                   <div class="bar right" id="right">
                       <div class="progress"></div>
                    </div>
                 </div>
