--- a/src/app/components/user/reservar/card-deporte/card-deporte.component.html
+++ b/src/app/components/user/reservar/card-deporte/card-deporte.component.html
@@ -1,7 +1,6 @@
-
-<div class="card text-white my-2 rounded-3">
-    <img src={{imagen}} class="card-img" alt="...">
-    <div class="card-img-overlay fondo text-white text-center align-middle">
-      <h5 class="text-white my-3">{{nombre}}</h5>
-    </div>
+<div class="card text-white my-2 rounded-3 border-0">
+  <img src="{{'../../../../assets/'+imagen}}" class="card-img rounded-3" alt="...">
+  <div class="card-img-overlay d-flex align-items-center justify-content-center fondo text-white rounded-3">
+    <h4 class="text-white text-center">{{name}}</h4>
   </div>
+</div>
