--- a/src/app/pages/user/reservar-menu/reservar-menu.component.html
+++ b/src/app/pages/user/reservar-menu/reservar-menu.component.html
@@ -8,10 +8,14 @@
     </ng-template>
     <div class="container px-0">
         <div class="row justify-content-between mt-3">
-            <div class="col-6" *ngFor="let deporte of deportes" >
-                    <app-card-deporte [nombre]='deporte.nombre' [imagen]="deporte.imagen"></app-card-deporte>
+            <div class="col-6" *ngFor="let deporte of newData" >
+                <a [routerLink]="['./', deporte.deporte_id]">
+                    <app-card-deporte [name]='deporte.name' [imagen]="deporte.imagen"></app-card-deporte>
+                </a>
             </div>
         </div>
     </div>
       
 </div>
+
+<!-- "{{'../../../../assets/'+imagen}} -->
