Edit espacio screen

--- a/src/app/pages/admin/app-admin.component.html
+++ b/src/app/pages/admin/app-admin.component.html
@@ -17,7 +17,7 @@
     </div>
     <ul nz-menu nzTheme="light" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
 
-      <li nz-menu-item nzMatchRouter routerLink="panelAdmin">
+      <li nz-menu-item nzMatchRouter routerLink="panel-admin">
         <span nz-icon nzType="appstore"></span>
         <span>Panel Administrativo</span>
       </li>
