--- a/src/app/components/admin/cardEspacio/cardEspacio.component.html
+++ b/src/app/components/admin/cardEspacio/cardEspacio.component.html
@@ -1,4 +1,14 @@
-<div class="container">
+<div class="container" routerLink="./{{espacio_id}}/espacio-details" [state]="{ espacio_id:espacio_id , name: name, created_at : created_at,
+updated_at : updated_at,
+code : code,
+capacity : capacity,
+time_max : time_max,
+details : details,
+open_at : open_at,
+close_at : close_at,
+espacio_padre_id : espacio_padre_id,
+imagen : imagen,
+is_active : is_active, }">
     <img class="card-image" alt="espacio" src="../../../../assets/login-image.jpeg" />
     <p class="text" style="font-size: 0.8rem;top: 20%;">{{code}}</p>
     <h2 nz-typography class="title">{{name}}</h2>
