--- a/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
+++ b/src/app/components/admin/cardPanelAdmin/cardPanelAdmin.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" nzRouter routerLink="{{path}}">
     <div class="card" style="width: 15rem;">
-        <img class="card-image" alt="example" src="../../../../assets/login-image.jpeg" />
+        <img class="card-image" alt="example" src="../../../assets/login-image.jpeg" />
         <h2 nz-typography class="card-title" style="font-size: 1rem;">{{name}}</h2>
         <div class="badge text-wrap" style="width: 6rem;">
             {{total}} totales
