--- a/src/app/components/admin/tabEspacios/tabEspacios.component.html
+++ b/src/app/components/admin/tabEspacios/tabEspacios.component.html
@@ -1,8 +1,9 @@
-<div class="row row-cols-auto" >
+<div class="row row-cols-auto">
     <div class="col" *ngFor="let espacio of espaciosArray">
-        <app-cardEspacio
-            [name]="espacio.name"
-            [code]="espacio.code"
-        ></app-cardEspacio>
+        <app-cardEspacio 
+        [espacio_id]="espacio.espacio_id" 
+        [name]="espacio.name"
+        [code]="espacio.code">
+        </app-cardEspacio>
     </div>
 </div>
