--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-sm-6">
-            <h2 nz-typography class="card-title">Panel de Administrador</h2>
+            <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">Panel de Administrador</p>
             <div class="row">
                 <div class="col-sm-6" *ngFor="let module of modulesAdmin">
                     <app-cardPanelAdmin [name]="module.name" [total]="module.total" [active]="module.active"
